--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,11 +3,18 @@
 
 html,
 body {
-  padding: 0.5rem 3rem;
+  padding: 0.1rem 2rem;
   margin: 0;
   font-family: $roboto;
   background-color: $background-color;
   color: $font-color;
+
+  #content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 a {
@@ -17,4 +24,45 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.products-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 15px;
+  margin-top: 5px;
+  width: 100%;
+  padding-bottom: 5vh;
+  box-shadow: 0 3px 2px -2px rgba(112, 112, 112, 0.26);
+}
+
+.products-heading {
+  text-align: center;
+  margin-bottom: 5vh;
+  color: $font-color;
+
+  h2 {
+    font-size: 1.8rem;
+    margin-bottom: 0;
+  }
+
+  p {
+    font-size: 1.1rem;
+    margin-top: 0;
+    margin-bottom: 0px;
+  }
+}
+
+@media only screen and (min-width: 1000px) {
+  html,
+  body {
+    padding: 0.1rem 8rem;
+  }
+}
+
+.success-wrapper {
+  display: flex;
+  justify-content: center;
+  min-height: 85vh;
 }
